--- a/templates/core/management/update_model.html
+++ b/templates/core/management/update_model.html
@@ -7,9 +7,10 @@
 
 {% block extrascript %}
 <script
-    src="{% static 'js/select.js' %}"
+    src="{% static 'js/select.min.js' %}"
     data-search="{% trans 'search'|capfirst %}"
     id="select-script"
+    defer
 ></script>
 <script>
     // update label of file-upload-field after file has been selected
